--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build",
+    "homepage": "https://nbbhatta143.github.io/craft-website-react/"
   },
   "eslintConfig": {
     "extends": [
