--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nbbhatta143.github.io/craft-website-react/",
   "name": "craft-website-react",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
-    "homepage": "https://nbbhatta143.github.io/craft-website-react/"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
